# browser-use-lite

./: .gitignore  README.md  pyproject.toml
src/browser_use_lite/: __init__.py  _http.py  client.py  models.py  sessions.py
tests/: conftest.py  test_client.py  test_exceptions.py  test_http.py  test_models.py  test_sessions.py
